--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <p>Redircting you to <a href="/map">map.newcaledonia.ml/map</a></p>
+    <p>Redircting you to <a href="/map/index.html">map.newcaledonia.ml/map</a></p>
 </body>
 
 </html>
