--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="7; url='/map'" />
+    <meta http-equiv="refresh" content="7; url='https://newcaledoniadevteam.github.io/MapWebsite/map/'" />
     <title>New Caledonia - Interactive Map</title>
     <!-- Primary Meta Tags -->
     <title>New Caledonia - Interactive Map</title>
