--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta http-equiv="refresh" content="7; url='https://newcaledoniadevteam.github.io/MapWebsite/map/'" />
+    <meta http-equiv="refresh" content="7; url='map/'" />
     <title>New Caledonia - Interactive Map</title>
     <!-- Primary Meta Tags -->
     <title>New Caledonia - Interactive Map</title>
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <p>Redircting you to <a href="https://newcaledoniadevteam.github.io/MapWebsite/map/index.html">newcaledoniadevteam.github.io/MapWebsite/map/</a></p>
+    <p>Redircting you to <a href="map/">map</a></p>
 </body>
 
 </html>
