--- a/map/index.html
+++ b/map/index.html
@@ -55,14 +55,14 @@
     <meta property="og:url" content="#">
     <meta property="og:title" content="New Caledonia - Interactive Map">
     <meta property="og:description" content="Interactive Map of New Caledonia. — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
-    <meta property="og:image" content="https://newcaledoniadevteam.github.io/MapWebsite/thumbnail.png">
+    <meta property="og:image" content="https://ncmap-1775e.web.app/thumbnail.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="#">
     <meta property="twitter:title" content="New Caledonia - Interactive Map">
     <meta property="twitter:description" content="Interactive Map of New Caledonia. — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
-    <meta property="twitter:image" content="https://newcaledoniadevteam.github.io/MapWebsite/thumbnail.png">
+    <meta property="twitter:image" content="https://ncmap-1775e.web.app/thumbnail.png">
 </head>
 
 <body margin="0" padding="0">
