--- a/index.html
+++ b/index.html
@@ -7,35 +7,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Favicon Information-->
-    <link rel="apple-touch-icon" sizes="180x180" href="https://newcaledoniadevteam.github.io//favicon/apple-touch-icon.png?v=PYAgOPKK4x">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://newcaledoniadevteam.github.io//favicon/favicon-32x32.png?v=PYAgOPKK4x">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://newcaledoniadevteam.github.io//favicon/favicon-16x16.png?v=PYAgOPKK4x">
-    <link rel="manifest" href="https://newcaledoniadevteam.github.io//favicon/site.webmanifest?v=PYAgOPKK4x">
-    <link rel="mask-icon" href="https://newcaledoniadevteam.github.io//favicon/safari-pinned-tab.svg?v=PYAgOPKK4x" color="#5f5f5f">
-    <link rel="shortcut icon" href="https://newcaledoniadevteam.github.io//favicon/favicon.ico?v=PYAgOPKK4x">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://newcaledoniadevteam.github.io/favicon/apple-touch-icon.png?v=PYAgOPKK4x">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://newcaledoniadevteam.github.io/favicon/favicon-32x32.png?v=PYAgOPKK4x">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://newcaledoniadevteam.github.io/favicon/favicon-16x16.png?v=PYAgOPKK4x">
+    <link rel="manifest" href="https://newcaledoniadevteam.github.io/favicon/site.webmanifest?v=PYAgOPKK4x">
+    <link rel="mask-icon" href="https://newcaledoniadevteam.github.io/favicon/safari-pinned-tab.svg?v=PYAgOPKK4x" color="#5f5f5f">
+    <link rel="shortcut icon" href="https://newcaledoniadevteam.github.io/favicon/favicon.ico?v=PYAgOPKK4x">
     <meta name="msapplication-TileColor" content="#000000">
-    <meta name="msapplication-TileImage" content="https://newcaledoniadevteam.github.io//favicon/mstile-144x144.png?v=PYAgOPKK4x">
-    <meta name="msapplication-config" content="https://newcaledoniadevteam.github.io//favicon/browserconfig.xml?v=PYAgOPKK4x">
+    <meta name="msapplication-TileImage" content="https://newcaledoniadevteam.github.io/favicon/mstile-144x144.png?v=PYAgOPKK4x">
+    <meta name="msapplication-config" content="https://newcaledoniadevteam.github.io/favicon/browserconfig.xml?v=PYAgOPKK4x">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Primary Meta Tags -->
     <title>New Caledonia - Interactive Map</title>
     <meta name="title" content="New Caledonia - Interactive Map">
-    <meta name="description" content="Interactive Map of New Caledonia. — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
+    <meta name="description" content="Interactive Map of New Caledonia — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="#">
     <meta property="og:title" content="New Caledonia - Interactive Map">
-    <meta property="og:description" content="Interactive Map of New Caledonia. — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
-    <meta property="og:image" content="https://ncmap-1775e.web.app/thumbnail.png">
+    <meta property="og:description" content="Interactive Map of New Caledonia — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
+    <meta property="og:image" content="https://map.newcaledonia.ml/thumbnail.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="#">
     <meta property="twitter:title" content="New Caledonia - Interactive Map">
-    <meta property="twitter:description" content="Interactive Map of New Caledonia. — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
-    <meta property="twitter:image" content="https://ncmap-1775e.web.app/thumbnail.png"></head>
+    <meta property="twitter:description" content="Interactive Map of New Caledonia — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
+    <meta property="twitter:image" content="https://map.newcaledonia.ml/thumbnail.png">
+    
+    </head>
 <body>
     <p>Redircting you to <a href="map/">map</a></p>
 </body>
