--- a/map/index.html
+++ b/map/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="https://newcaledoniadevteam.github.io//favicon/mstile-144x144.png?v=PYAgOPKK4x">
     <meta name="msapplication-config" content="https://newcaledoniadevteam.github.io//favicon/browserconfig.xml?v=PYAgOPKK4x">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#2ecc71">
 
     <!-- Primary Meta Tags -->
     <title>New Caledonia - Interactive Map</title>
