--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@
     <title>404 Page Not Found - New Caledonia</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <!-- Primary Meta Tags -->
-    <title>New Caledonia - Home</title>
-    <meta name="title" content="New Caledonia">
+    <meta name="title" content="404 Page Not Found - New Caledonia">
     <meta name="description" content="New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth. On this web page, you will find the New Caledonia Times, future public works projects, laws, sports events, and everything you need to know about New Caledonia.">
 
     <style>
@@ -458,7 +457,7 @@
 
     <br>
     <h1>404 Page Not Found</h1>
-    <h2 style="font-size: 45px;">Return <a href="https://dash.newcaledonia.ml/">Home</a></h2>
+    <h2 style="font-size: 45px;">Return <a href="https://dash.newcaledonia.us/">Home</a></h2>
 
     <div class="enderman">
         <!-- enderman head -->
