--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="New Caledonia - Interactive Map">
     <meta property="og:description" content="Interactive Map of New Caledonia — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
-    <meta property="og:image" content="https://map.newcaledonia.ml/thumbnail.png">
+    <meta property="og:image" content="https://map.newcaledonia.us/thumbnail.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="New Caledonia - Interactive Map">
     <meta property="twitter:description" content="Interactive Map of New Caledonia — New Caledonia is a new, ambitious nation that is run entirely in Minecraft. It is a republic run entirely by youth.">
-    <meta property="twitter:image" content="https://map.newcaledonia.ml/thumbnail.png">
+    <meta property="twitter:image" content="https://map.newcaledonia.us/thumbnail.png">
     
     </head>
 <body>
